opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Simon Grondin"
  "Larry Lee"
]
synopsis: "Asemio's DB lib"
description: """
Abstraction over Caqti that provides transactions and a smoother developer experience.
"""
license: "MIT"
tags: []
homepage: "https://github.com/asemio/adb"
doc: "https://github.com/asemio/adb"
bug-reports: "https://github.com/asemio/adb/issues"
depends: [
  "ocaml" {>= "4.10.0"}
  "dune" { >= "1.9.0"}

  "core" { >= "v0.14.0" }
  "lwt" { >= "5.2.0" & < "6.0.0" }

  "caqti" { >= "1.0.0" & < "2.0.0" }
  "caqti-lwt"
  "caqti-driver-postgresql"
  "ppx_rapper" { >= "2.0.0" }

  "ppx_deriving" { >= "4.4.1" }
  "ppx_deriving_yojson" { >= "3.5.2" }
  "ppx_expect" { with-test }
  "uuidm" { >= "0.9.0" }
  "yojson" { >= "1.7.0" }
]
